k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboapp
spec:
  selector:
    matchLabels:
      app: roboapp
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        app: roboapp
    spec:
      containers:
        - name: roboapp
          image: ghcr.io/open-roboe/backend:sha-31b52e52977273789ddeac1ca17344c1130c49bf
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
