k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  roboapp
spec:
  selector:
    app: roboapp

  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP #optional protocol
