k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roboapp
spec:
  rules:
  - host: "roboapp.halb.it"
    http:
      paths:
      # Path-based routing settings:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: roboapp
            port:
              number: 80
  tls:
  - hosts:
    - "roboapp.halb.it"
    secretName: roboapp-cert  #name of the tls secret. Make sure this is defined first
